--- a/Src/CastIron.SqlParsing.Tests/CastIron.SqlParsing.Tests.csproj
+++ b/Src/CastIron.SqlParsing.Tests/CastIron.SqlParsing.Tests.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CastIron.SqlParser\CastIron.SqlParsing.csproj" />
+    <ProjectReference Include="..\CastIron.SqlParsing\CastIron.SqlParsing.csproj" />
   </ItemGroup>
 
 </Project>
