--- a/Src/SqlParser/SqlParser.csproj
+++ b/Src/SqlParser/SqlParser.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net45</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
     <AssemblyName>CastIron.SqlParser</AssemblyName>
     <RootNamespace>SqlParser</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -23,6 +23,12 @@
   <ItemGroup>
     <Folder Include="Analysis\" />
     <Folder Include="Optimizer\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="ParserObjects">
+      <Version>1.1.1</Version>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
