Rewrite parser to use new ParserObjects instead of recursive descent
Solution builds.
SELECT and related tests are passing (with minor modifications)
several TODO notes and things comment out
Lots of debugging code to remove and cleanups are required

--- a/Src/SqlParser/SqlParser.csproj
+++ b/Src/SqlParser/SqlParser.csproj
@@ -26,9 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ParserObjects">
-      <Version>1.1.1</Version>
-    </PackageReference>
+    <ProjectReference Include="..\..\..\ParserObjects\ParserObjects\ParserObjects.csproj" />
   </ItemGroup>
 
 </Project>
