--- a/Src/SqlParser/SqlParser.csproj
+++ b/Src/SqlParser/SqlParser.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\ParserObjects\ParserObjects\ParserObjects.csproj" />
+    <PackageReference Include="ParserObjects" Version="2.0.0-beta3" />
   </ItemGroup>
 
 </Project>
