--- a/Src/SqlParser.PostgreSql.Tests/SqlParser.PostgreSql.Tests.csproj
+++ b/Src/SqlParser.PostgreSql.Tests/SqlParser.PostgreSql.Tests.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.0.0" />
-    <PackageReference Include="ParserObjects" Version="2.0.0-beta4" />
+    <PackageReference Include="ParserObjects" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
