--- a/Src/SqlParser/SqlParser.csproj
+++ b/Src/SqlParser/SqlParser.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ParserObjects" Version="2.0.0-beta4" />
+    <PackageReference Include="ParserObjects" Version="2.0.0" />
   </ItemGroup>
 
 </Project>
