TODO notes for changes from Standard->SqlServer
Small cleanups

--- a/Src/SqlParser/SqlParser.csproj
+++ b/Src/SqlParser/SqlParser.csproj
@@ -22,7 +22,7 @@
 
   <ItemGroup>
     <Folder Include="Analysis\" />
-    <Folder Include="Optimizer\" />
+    <Folder Include="Optimizing\" />
   </ItemGroup>
 
   <ItemGroup>
