--- a/Src/SqlParser/SqlParser.csproj
+++ b/Src/SqlParser/SqlParser.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net462</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <AssemblyName>CastIron.SqlParser</AssemblyName>
     <RootNamespace>SqlParser</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
@@ -26,7 +26,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ParserObjects" Version="2.0.0" />
+    <PackageReference Include="ParserObjects" Version="3.0.0-alpha5" />
   </ItemGroup>
-
 </Project>
