Update to parserobjects 3.0.0-beta1
Needed to make one change in the lexer for multi-line comments, I'm not sure why that was needed.

--- a/Src/SqlParser/SqlParser.csproj
+++ b/Src/SqlParser/SqlParser.csproj
@@ -26,6 +26,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="ParserObjects" Version="3.0.0-alpha5" />
+    <PackageReference Include="ParserObjects" Version="3.0.0-beta1" />
   </ItemGroup>
 </Project>
